MFC r310560:

[vchi] replace non-reproducible __DATE__/__TIME__ with hardcoded string

Although vchiq_build_date and vchiq_build_time are not used in current
vchi driver at the moment, make sure these value will not leak into
build later on if at some point they will be refered in some new
imported code

PR:		215494
Reported by:	emaste

Former-commit-id: 5d891663cb557bef9c090d91421270a03cfe57a4